// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance sheet tests Balance sheet page displays an empty view when no enough data is available 1`] = `
<div
  class="sc-iqcoie hbWlmZ"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crXcEl jFGXYP"
  >
    <div
      class="sc-fEOsli imBsLv"
    >
      <div
        class="sc-evZas cvjdtR"
      >
        <h1
          class="sc-breuTD hHjeyz"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikZpkk jCGVmt"
        >
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hAZoDl ipIwiC"
  >
    <div
      class="sc-eCYdqJ iIVdgd"
    >
      <header
        class="sc-jSMfEi iYsPOi"
      >
        <h2
          class="sc-gKXOVf fdoXVx"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iBkjds ldYSwY"
          >
            <div
              class="sc-ftvSup fEhjy"
            >
              all 
            </div>
            <div
              class="sc-ftvSup hIudbx"
            >
              accounts 1
            </div>
            <div
              class="sc-ftvSup hIudbx"
            >
              assets 0
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-cTQhss iEEDlX"
      >
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bczRLJ losOXh"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKMtZM gVtwZW"
            >
              $0
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                undefined
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $0
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $0
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bczRLJ goIdhJ"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKMtZM gVtwZW"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezWOiH hCzZma"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bczRLJ iNgSBa"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKMtZM gVtwZW"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezWOiH hCzZma"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bczRLJ iCBIxk"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKMtZM gVtwZW"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezWOiH hCzZma"
          >
            No balances are available in this group
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 1`] = `
<div
  class="sc-iqcoie hbWlmZ"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crXcEl jFGXYP"
  >
    <div
      class="sc-fEOsli imBsLv"
    >
      <div
        class="sc-evZas cvjdtR"
      >
        <h1
          class="sc-breuTD hHjeyz"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikZpkk jCGVmt"
        >
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hAZoDl ipIwiC"
  >
    <div
      class="sc-eCYdqJ iIVdgd"
    >
      <header
        class="sc-jSMfEi iYsPOi"
      >
        <h2
          class="sc-gKXOVf fdoXVx"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iBkjds ldYSwY"
          >
            <div
              class="sc-ftvSup fEhjy"
            >
              all 
            </div>
            <div
              class="sc-ftvSup hIudbx"
            >
              accounts 7
            </div>
            <div
              class="sc-ftvSup hIudbx"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-cTQhss iEEDlX"
      >
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bczRLJ losOXh"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKMtZM gVtwZW"
            >
              $10,700
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                savings
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $6,000
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                checking
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $3,400
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                cash
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $1,300
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bczRLJ goIdhJ"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKMtZM gVtwZW"
            >
              -$21,974
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                credit card
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                -$724
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                auto
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                -$21,250
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bczRLJ iNgSBa"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKMtZM gVtwZW"
            >
              $142,831
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                cryptocurrency
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $86,920
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $69,420
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                security
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $33,125
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $30,000
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $3,125
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                roth
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $18,536
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                401k
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $4,251
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bczRLJ iCBIxk"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKMtZM gVtwZW"
            >
              $53,000
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                vehicle
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $38,500
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                collectible
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $14,500
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 2`] = `
<div
  class="sc-iqcoie hbWlmZ"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crXcEl jFGXYP"
  >
    <div
      class="sc-fEOsli imBsLv"
    >
      <div
        class="sc-evZas cvjdtR"
      >
        <h1
          class="sc-breuTD hHjeyz"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikZpkk jCGVmt"
        >
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hAZoDl ipIwiC"
  >
    <div
      class="sc-eCYdqJ iIVdgd"
    >
      <header
        class="sc-jSMfEi iYsPOi"
      >
        <h2
          class="sc-gKXOVf fdoXVx"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iBkjds ldYSwY"
          >
            <div
              class="sc-ftvSup hIudbx"
            >
              all 
            </div>
            <div
              class="sc-ftvSup fEhjy"
            >
              accounts 7
            </div>
            <div
              class="sc-ftvSup hIudbx"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-cTQhss iEEDlX"
      >
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bczRLJ losOXh"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKMtZM gVtwZW"
            >
              $10,700
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                savings
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $6,000
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Emergency Fund"
                >
                  Emergency Fund
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $6,000
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                checking
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $3,400
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Alice's Checking"
                >
                  Alice's Checking
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $3,400
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                cash
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $1,300
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Wallet"
                >
                  Wallet
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $1,300
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bczRLJ goIdhJ"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKMtZM gVtwZW"
            >
              -$21,974
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                credit card
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                -$724
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Bob's Juggernaut Visa"
                >
                  Bob's Juggernaut Visa
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                -$724
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                auto
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                -$21,250
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Toyota Auto Loan"
                >
                  Toyota Auto Loan
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                -$21,250
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bczRLJ iNgSBa"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKMtZM gVtwZW"
            >
              $22,786
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                roth
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $18,536
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Alice's Roth IRA"
                >
                  Alice's Roth IRA
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $18,536
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                401k
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $4,251
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/account/Bob's 401k"
                >
                  Bob's 401k
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Account
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $4,251
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bczRLJ iCBIxk"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKMtZM gVtwZW"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezWOiH hCzZma"
          >
            No balances are available in this group
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Balance sheet tests Balance sheet page displays the correct data 3`] = `
<div
  class="sc-iqcoie hbWlmZ"
  data-testid="scrollview-balance-sheet"
>
  <header
    class="sc-crXcEl jFGXYP"
  >
    <div
      class="sc-fEOsli imBsLv"
    >
      <div
        class="sc-evZas cvjdtR"
      >
        <h1
          class="sc-breuTD hHjeyz"
          title="Balance sheet"
        >
          Balance sheet
        </h1>
      </div>
      <nav>
        <div
          class="sc-ikZpkk jCGVmt"
        >
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Add new
          </button>
          <button
            class="sc-kLLXSd dpoyPh"
            type="button"
          >
            Import
          </button>
        </div>
      </nav>
    </div>
  </header>
  <main
    class="sc-hAZoDl ipIwiC"
  >
    <div
      class="sc-eCYdqJ iIVdgd"
    >
      <header
        class="sc-jSMfEi iYsPOi"
      >
        <h2
          class="sc-gKXOVf fdoXVx"
        >
          Balances
        </h2>
        <div>
          <nav
            class="sc-iBkjds ldYSwY"
          >
            <div
              class="sc-ftvSup hIudbx"
            >
              all 
            </div>
            <div
              class="sc-ftvSup hIudbx"
            >
              accounts 7
            </div>
            <div
              class="sc-ftvSup fEhjy"
            >
              assets 6
            </div>
          </nav>
        </div>
      </header>
      <div
        class="sc-cTQhss iEEDlX"
      >
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-cash"
        >
          <div
            class="sc-bczRLJ losOXh"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Cash
            </p>
            <span
              appearance="1"
              class="sc-hKMtZM gVtwZW"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezWOiH hCzZma"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-debt"
        >
          <div
            class="sc-bczRLJ goIdhJ"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Debt
            </p>
            <span
              appearance="2"
              class="sc-hKMtZM gVtwZW"
            >
              $0
            </span>
          </div>
          <div
            class="sc-ezWOiH hCzZma"
          >
            No balances are available in this group
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-investments"
        >
          <div
            class="sc-bczRLJ iNgSBa"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Investments
            </p>
            <span
              appearance="3"
              class="sc-hKMtZM gVtwZW"
            >
              $120,045
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                cryptocurrency
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $86,920
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Bitcoin"
                >
                  Bitcoin
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $69,420
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Ethereum"
                >
                  Ethereum
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $17,500
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                security
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $33,125
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Tesla"
                >
                  Tesla
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $30,000
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/GameStop"
                >
                  GameStop
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $3,125
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-efBctP gDxppL"
          data-testid="balance-group-other-assets"
        >
          <div
            class="sc-bczRLJ iCBIxk"
          >
            <p
              class="sc-gsnTZi hyzlkZ"
            >
              Other assets
            </p>
            <span
              appearance="4"
              class="sc-hKMtZM gVtwZW"
            >
              $53,000
            </span>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                vehicle
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $38,500
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/2022 Toyota RAV4"
                >
                  2022 Toyota RAV4
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $38,500
              </span>
            </div>
          </div>
          <div
            class="sc-gXmSlM gmMbbu"
          >
            <div
              class="sc-cCsOjp iYqSvK"
            >
              <div
                class="sc-jdAMXn kKAEzl"
              >
                collectible
              </div>
              <span
                class="sc-bZnhIo iGVqqS"
              >
                $14,500
              </span>
            </div>
            <div
              class="sc-ciZhAO kBgLpW"
            >
              <div>
                <a
                  class="sc-himrzO dWeqip"
                  href="#/asset/Pokemon Card Collection"
                >
                  Pokemon Card Collection
                </a>
                <div
                  class="sc-iAvgwm jdqKDN"
                >
                  Asset
                </div>
              </div>
              <span
                class="sc-iTONeN jUJDHx"
              >
                $14,500
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
